# Changelog
# $Id$
nn-nn-13 - Version 5.1.26
  - Fix for Bug#45757 (11754192), Don't allow updateRow() to be called when updatable cursor is positioned on insert row

05-06-13 - Version 5.1.25

  - Fix for Bug#68801, java webstart mysql-connector-java lib calls -bin library.

  - Fix for Bug#16426462, SyntaxRegressionTest failing on C/J 5.1.24 against MySQL 5.6.10

  - Fix for Bug#60816, Cannot pass NULL to an INOUT procedure parameter.

  - Added support for Connection Attributes when used with MySQL Server versions (5.6+) which support this feature.  
    By default, the following standard attributes are sent to the server, where they can be seen in the 
    performance_schema.session_connect_attrs table:
     * _client_version : the version of MySQL Connector Java in use
     * _client_name : "MySQL Connector Java"
     * _runtime_version : the version of the Java runtime environment in which the driver is running
     * _runtime_vendor : the name of company which produced the Java runtime environment
    Additionally, users may supply their own key/value attributes to be exposed by providing them in 
    "key1:value1,key2:value2" format in the connectionAttributes connection property.
    To avoid sending any connection attributes to the server, set connectionAttributes property to "none".
    
  - Fix for Bug#68763 (16545334), ReplicationConnection.isMasterConnection() returns false always.

  - Fix for Bug#68733 (16526938), ReplicationConnection doesn't ping all slaves.

  - Fix for Bug#68556, Tomcat can't stop a cleanup thread by clearReferencesStopThreads.

  - Fix for Bug#16436511, getDriverName() returns a string with company name "MySQL-AB". Driver name changed to "MySQL Connector Java".

  - Fix for Bug#68664 (16486957), Enable packaging of .JAR file from Eclipse.

03-05-13 - Version 5.1.24

  - Fix for Bug#64204, ResultSet.close hangs if streaming query is killed.

  - Fix for Bug#16224249, Deadlock on concurrently used LoadBalancedMySQLConnection: